--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -10,19 +10,17 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
     margin: 0 auto;
 }
 
-
 .character-portrait{
+    // margin: 0 auto;
+    text-align: center;    
     img{
         height: 40vh; 
         max-height: 1000px;
-        // width: 50%;
     }
 }
 
-
 ul{
     padding: 0;
-    // margin: 0;
 }
 .characters-container{
     display: flex;
