--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -4,16 +4,20 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
-    // background: url('../../marvel-images/marvelBG.jpg'), linear-gradient(to bottom, rgba(0,0,0, 0.2), rgba(0, 0, 0, 0.2));
-    // background-image: url('../../marvel-images/marvelBG.jpg'), linear-gradient(to bottom, rgba(0,0,0, 0.9), rgba(0, 0, 0, 0.2));
-    // background-blend-mode: lighten color-burn soft-light;
     background-image: linear-gradient(to bottom, rgba(255,255,255, 0.95), rgba(0, 0, 0, 0.95) 100%), url('/public/marvel-images/marvelBG.jpg');
-    // opacity: 0.2;
+    min-height: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .wrapper{
-    width: 90%;
+    width: 70%;
     margin: 0 auto;
 }
 .flex-container-char{
@@ -21,13 +25,23 @@ body{
 }
 
 .character-portrait{
+    position: relative;
+    left: 0;
     width: 100%;
-    text-align: center;    
+    text-align: center;
+
     img{
         height: 40vh; 
         max-height: 1000px;
     }
 }
+.test{
+    left: -70px;
+    transition: left 0.3s ease-in-out;
+}
+
+
+
 
 ul{
     padding: 0;
@@ -36,40 +50,113 @@ ul{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    list-style: none;
 }
 
 .character-icon{
     display: inline-block;
     max-height: 75px;
-    
-    
-}
-
-
-
-.move{
-    background-color: black;
 }
 
 .dropdown-menu, .soundtrack{
     position: absolute;
     right: 0;    
 }
-.dropdown-menu, .track{
-    background-color: transparent;
-    border: none;
-}
 
 .soundtrack {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    margin-top: 30px;
-    right: 0;
+}
+.dropdown-menu{
+    position: absolute;
+    background-color: white;
+    text-align: right;
+    border-radius: 5px;  
 }
 .track{
+    text-align: right;
     position: relative;
-    margin: 5px 0;
+    background-color: white;
+    border-radius: 5px;
 }
 
+.dropdown-menu, .track{
+    &:hover{
+        transition: all .3s ease-in-out;
+        background-color: white;
+        color: navy;
+    }
+}
+
+
+.info-frame{
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.show{
+    display: flex;
+    flex-direction: column;
+    p{
+        margin: 10px 0;
+    }
+}
+
+
+
+
+/* MEDIA QUERIES */
+@media(max-width: 1000px)
+{
+    .character-portrait img{
+        width: auto;
+        height: 300px;
+        max-height: initial;
+    }
+}
+
+
+@media (max-width: 800px){
+    .wrapper{
+        width: 90%;
+    }
+    .character-portrait img{
+        width: auto;
+        height: 250px;
+        max-height: initial;
+    }
+}
+
+
+
+@media (max-width: 500px){
+    .character-icon {
+        width: 55px;
+        max-height: 55px;
+        img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 100%;
+        }
+    }
+    .character-portrait img{
+        height: 200px;
+        max-height: initial;
+    }
+
+}
+
+
+@media(max-height: 700px){
+    body{
+        height: initial;
+    }
+    .character-icon{
+        width: 50px;
+        max-height: 50px;
+    }
+}
+/* MEDIA QUERIES */
